--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
 
 <H1><center><pre><b><font face="Verdana" color="Grey" size="10">"Hey Folks! I'm Akshay Suresh Babu</font></b></center></pre></H1><fieldset>
-Here I am <br>
+<b>HERE I AM <b><br>
  <img src="Asb.jpg" height="300" width="300" border="3" alt="No worries,we will meet soon."><br>
-Contact details:- <br>Mobile number : 8547530187<br>
+<font aize="7">Contact details:- <br>Mobile number : 8547530187</font><br>
                               <A href="https://www.instagram.com/a_k.s_h_a_y/"><em><img src="ig.jpg" height="75" width="75"></em> </A><br>
 <A href="https://www.linkedin.com/in/akshay-suresh-babu-83187a214"><em><img src="ln.jpg" height="75" width="75"></em></a><br>
 <A href="mailto:akshayallneeds@gmail.com"><em><img src="gn.jpg" height="75" width="75"></em></A>
